--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>SoM Artists Osmo</title>
         <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Gloria+Hallelujah:300,400,700,800'>
         <link rel="stylesheet" href="./styles.css">
+        <link rel="shortcut icon" href="https://ik.imagekit.io/ghow2otb3rc/Projects/SoM/sound-of-mind-still_sm_DSa1-eB4-.png" type="image/x-icon">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Flip.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/CustomEase.min.js"></script>
